Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>

        * COPYING:

          Updated to include DAnCE.

Fri Oct  1 14:35:01 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/EM-Launch-Failures/run_test.pl:
        * tests/DAnCE/EM-Redeployment/run_test.pl:
        * tests/DAnCE/NodeManager-Deployments/run_test_cdr.pl:

          Fuzz.

Fri Oct  1 14:30:15 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIAO-INSTALL.html:

          Updated.

Fri Oct  1 13:11:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.mpc:
          Added template files.

Fri Oct  1 12:59:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Updater_T.cpp:
          Typo fix

Fri Oct  1 13:03:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/ClientContainerInterceptorRegistration_Impl.h:
        * ciao/Containers/Extension/ClientContainerInterceptorRegistration_Impl.cpp:
        * ciao/Containers/Extension/Extension_Container.h:
        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Extension/Extension_Container.idl:
        * ciao/Containers/Extension/Extension_Container.mpc:
        * ciao/Containers/Extension/Interceptor_Registration_T.h:
        * ciao/Containers/Extension/Interceptor_Registration_T.cpp:
        * ciao/Containers/Extension/ServantContainerInterceptorRegistration_Impl.h:
        * ciao/Containers/Extension/ServantContainerInterceptorRegistration_Impl.cpp:
        * ciao/Containers/Extension/ServerContainerInterceptorRegistration_Impl.h:
        * ciao/Containers/Extension/ServerContainerInterceptorRegistration_Impl.cpp:
        * ciao/Containers/Extension/StubContainerInterceptorRegistration_Impl.h:
        * ciao/Containers/Extension/StubContainerInterceptorRegistration_Impl.cpp:
        * ciao/Contexts/Extension/Extension_Context_T.h: