@@ -8,6 +8,10 @@
 #if !defined STUBCONTAINERINTERCEPTORREGISTRATION_IMPL_H
 #define STUBCONTAINERINTERCEPTORREGISTRATION_IMPL_H
 
+#include /**/ "ace/pre.h"
+
+#include "ciao/Containers/Extension/Extension_Container_export.h"
+
 #include "ccm/Extension/CCM_StubContainerInterceptorC.h"
 #include "ccm/Extension/CCM_StubContainerInterceptorRegistrationC.h"
 #include "ciao/Containers/Extension/Interceptor_Registration_T.h"
@@ -24,7 +28,7 @@ namespace CIAO
    *
    * Part of COPI (Container Portable Interceptor)
    */
-  class StubContainerInterceptorRegistration_Impl
+  class EXTENSION_CONTAINER_Export StubContainerInterceptorRegistration_Impl
     : public Interceptor_Registration_T<
         ::Components::ContainerPortableInterceptor::StubContainerInterceptorRegistration,
         ::Components::ContainerPortableInterceptor::StubContainerInterceptor>
@@ -47,5 +51,7 @@ namespace CIAO
     unregister_stub_interceptor (::Components::Cookie * cookie);
   };
 }
+
+#include /**/ "ace/post.h"
 
 #endif /* STUBCONTAINERINTERCEPTORREGISTRATION_IMPL_H */
